--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav>
             <a href="#servicos">Serviços</a>
-            <a href="index2.html">Projetos</a>
+            <a href="Projetos.html">Projetos</a>
             <a href="https://wa.me/5574999094232?text=Ol%C3%A1%2C%20quero%20agendar%20um%20atendimento."
                 target="_blank">WhatsApp</a>
             <a href="https://www.linkedin.com/in/yerijhon-rian" target="_blank">LinkedIn</a>
