--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Yerijhon (Joel) Rian</title>
-    <!-- Importando CSS externo -->
+
+    <!-- CSS externo -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+
+    <!-- TOPO + ANIMAÇÃO -->
     <div class="bodytop">
+
         <div class="nickname">
             <h1>Bem Vindo</h1>
         </div>
+
         <div class="bg-animado"></div>
+
+        <!-- NAVBAR -->
         <header class="header">
             <nav>
-                <!-- O primeiro link é o que terá a animação -->
                 <a href="#servicos">Serviços</a>
                 <a href="Projetos.html">Projetos</a>
                 <a href="https://wa.me/5574999094232?text=Ol%C3%A1%2C%20quero%20agendar%20um%20atendimento."
@@ -29,55 +34,136 @@
             </nav>
         </header>
 
+        <!-- HERO -->
         <section class="hero">
             <h2>Desenvolvedor Front-end</h2>
-            <p>Crio interfaces modernas, animadas e funcionais para levar seus projetos de negócios ao próximo nível.
+            <p>
+                Crio interfaces modernas, animadas e funcionais para levar seu projeto de negócios ao próximo nível.
             </p>
+
             <div class="btns">
                 <a href="https://github.com/joel-rian?tab=repositories">Ver Projetos</a>
+
                 <a href="mailto:contato.yerijhonrian@gmail.com?subject=Contato%20do%20site&body=Olá,%20quero%20falar%20sobre%20um%20projeto!"
                     target="_blank">
                     Entrar em Contato
                 </a>
             </div>
+        </section>
     </div>
-    </section>
+    <div class="backone"></div> <!-- fim bodytop -->
 
-<div class="back"> 
-
-
-
-</div>
+    <!-- PARALLAX -->
 
 
-
-
+    <!-- SERVIÇOS -->
     <section class="servicos" id="servicos">
         <h2>Serviços</h2>
+
         <div class="cards">
+
             <div class="card">
                 <h3>Sites Profissionais</h3>
                 <p>Criação de sites modernos, rápidos e responsivos.</p>
             </div>
+
             <div class="card">
                 <h3>Lojas Online</h3>
                 <p>Desenvolvimento de e-commerce com alta conversão.</p>
             </div>
+
             <div class="card">
                 <h3>Landing Pages</h3>
                 <p>Páginas otimizadas para captar clientes.</p>
             </div>
+
             <div class="card">
                 <h3>Manutenção</h3>
                 <p>Atualizações, correções e performance.</p>
             </div>
+
         </div>
     </section>
-    <img src="./img/Joel.jpg" class="Joel">
+
+    <div class="backtwo"></div>
+
+    <section class="sobre" id="sobre">
+        <h2>Minha História</h2>
+
+        <div class="sobre-container">
+
+            <div class="texto-sobre">
+                <p>
+                    Olá sou o Yerijhon. Focado na carreira de tecnologia, estou a especializar-me em desenvolvimento
+                    Front-end, com forte inclinação para a linguagem JavaScript. Esta área alinha-se com o meu interesse
+                    em lógica de negócio e otimização de sistemas.
+                </p>
+                <p>
+                    A minha experiência como gestor de produção foi fundamental para desenvolver uma visão prática e
+                    orientada para a solução de problemas. Esta função exigiu e aprimorou a minha resiliência,
+                    inteligência emocional e adaptabilidade, permitindo-me construir um sólido networking e contribuir
+                    ativamente para a eficiência operacional, otimizando sistemas.</p>
+                </p>
+                <p>
+                    Acredito que a partilha de conhecimento e o apoio mútuo são pilares para o sucesso. Tenho o prazer
+                    de
+                    contribuir para equipes que promovem a dedicação, a ambição de crescimento e a mentalidade
+                    inovadora.
+                </p>
+                <p>
+                    Se quiser conhecer meus projetos ou bater um papo sobre programação, será um prazer!
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <div class="backthree"></div>
+
+    <section class="skill">
+        <div class="skills">
+            <h3>Minhas Melhores Habilidades</h3>
+
+            <div class="skill">
+                <p>HTML</p>
+                <div class="progress"><span style="width: 90%;"></span></div>
+            </div>
+
+            <div class="skill">
+                <p>CSS</p>
+                <div class="progress"><span style="width: 85%;"></span></div>
+            </div>
+
+            <div class="skill">
+                <p>JavaScript</p>
+                <div class="progress"><span style="width: 70%;"></span></div>
+            </div>
+        </div>
+    </section>
+
+    <div class="backfour"></div>
+
+    <section class="carater">
+        <div class="valores">
+            <p>Compromisso com cada projeto</p>
+            <p>Trabalho limpo e organizado</p>
+            <p>Aprendizado contínuo</p>
+            <p>Resiliência e foco</p>
+        </div>
+    </section>
+
+    <div class="backfive"></div>
+
+    <!-- FOTO PRINCIPAL -->
+    <img src="./img/Joel.jpg" alt="Foto de Yerijhon Rian" class="Joel">
+
+    <!-- FOOTER -->
     <footer>
         © 2025 - Portfólio Yerijhon (Joel) Rian
     </footer>
+
+    <!-- JS -->
     <script src="javascript2.js"></script>
+
 </body>
 
 </html>
