--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 
         <!-- HERO -->
         <section class="hero">
-            <h2>Desenvolvedor Front-end</h2>
+            <h2>Desenvolvedor Full Stack</h2>
             <p>
-                Crio interfaces modernas, animadas e funcionais para levar seu projeto de negócios ao próximo nível.
+                Como Desenvolvedor Front End, crio interfaces modernas, animadas e funcionais para levar seu projeto de
+                negócios ao próximo nível.
             </p>
+            <p>E como Desenvolvedor Full Stack, transformo ideias em aplicações robustas e escaláveis. Minha
+                especialidade é criar automações inteligentes que otimizam processos e impulsionam a eficiência.</p>
 
             <div class="btns">
-                <a href="Projetos.html">Ver Projetos</a>
+                <a href="index2.html">Ver Projetos</a>
 
                 <a href="mailto:contato.yerijhonrian@gmail.com?subject=Contato%20do%20site&body=Olá,%20quero%20falar%20sobre%20um%20projeto!"
                     target="_blank">
@@ -68,8 +71,8 @@
             </div>
 
             <div class="card">
-                <h3>Lojas Online</h3>
-                <p>Desenvolvimento de e-commerce com alta conversão.</p>
+                <h3>Automações AI</h3>
+                <p>Desenvolvimento de aplicações de alto desempenho.</p>
             </div>
 
             <div class="card">
@@ -94,24 +97,20 @@
 
             <div class="texto-sobre">
                 <p>
-                    Olá sou o Yerijhon. Focado na carreira de tecnologia, estou a especializar-me em desenvolvimento
-                    Front-end, com forte inclinação para a linguagem JavaScript. Esta área alinha-se com o meu interesse
-                    em lógica de negócio e otimização de sistemas.
+                    Como Desenvolvedor Full Stack, minha expertise reside na arquitetura completa de soluções digitais,
+                    desde a concepção visual e funcional do frontend até a robusta organização do backend.
+                <p>Sou
+                    especialista em criar sites de alto desempenho, garantindo uma experiência de usuário impecável.</p>
+                <p>Meu diferencial é a implementação estratégica de automações em todo o fluxo de trabalho.</p>
+                <p>Ao integrar
+                    processos automatizados no backend, consigo eliminar a intervenção manual em tarefas críticas,
+                    diminuindo drasticamente a margem de erro e elevando a confiabilidade do sistema.</p>
+                <p>Isso resulta em
+                    projetos entregues com maior velocidade, segurança e uma fundação técnica que suporta o crescimento
+                    contínuo da sua empresa</p>
                 </p>
                 <p>
-                    A minha experiência como gestor de produção foi fundamental para desenvolver uma visão prática e
-                    orientada para a solução de problemas. Esta função exigiu e aprimorou a minha resiliência,
-                    inteligência emocional e adaptabilidade, permitindo-me construir um sólido networking e contribuir
-                    ativamente para a eficiência operacional, otimizando sistemas.</p>
-                </p>
-                <p>
-                    Acredito que a partilha de conhecimento e o apoio mútuo são pilares para o sucesso. Tenho o prazer
-                    de
-                    contribuir para equipes que promovem a dedicação, a ambição de crescimento e a mentalidade
-                    inovadora.
-                </p>
-                <p>
-                    Se quiser conhecer meus projetos ou bater um papo sobre programação, será um prazer!
+                    Se quiser conhecer meus projetos ou bater um papo sobre como eu posso lhe ajudar, será um prazer!
                 </p>
             </div>
         </div>
@@ -124,18 +123,30 @@
             <h3>Minhas Melhores Habilidades</h3>
 
             <div class="skill">
-                <p>HTML</p>
+                <p>HTML5</p>
                 <div class="progress"><span style="width: 90%;"></span></div>
             </div>
 
             <div class="skill">
-                <p>CSS</p>
+                <p>CSS3</p>
                 <div class="progress"><span style="width: 85%;"></span></div>
             </div>
 
             <div class="skill">
                 <p>JavaScript</p>
                 <div class="progress"><span style="width: 70%;"></span></div>
+            </div>
+            <div class="skill">
+                <p>Node</p>
+                <div class="progress"><span style="width: 60%;"></span></div>
+            </div>
+            <div class="skill">
+                <p>TypeScript</p>
+                <div class="progress"><span style="width: 50%;"></span></div>
+            </div>
+            <div class="skill">
+                <p>Automações AI</p>
+                <div class="progress"><span style="width: 80%;"></span></div>
             </div>
         </div>
     </section>
