Update/index/css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Yerijhon Rian - Full Stack Developer</title>
-
     <!-- CSS externo -->
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.botpress.cloud/webchat/v3/inject.js"></script>
 </head>
 
 <body>
@@ -22,25 +22,24 @@
             <a href="#servicos">Serviços</a>
             <a href="#projetos">Projetos</a>
             <a href="#habilidades">Habilidades</a>
-            <a href="https://wa.me/5574999094232?text=Ol%C3%A1%2C%20quero%20agendar%20um%20atendimento."
-                target="_blank">WhatsApp</a>
             <a href="https://www.linkedin.com/in/yerijhonrian" target="_blank">LinkedIn</a>
             <a href="https://github.com/joel-rian" target="_blank">GitHub</a>
         </nav>
     </header>
+
 
     <!-- HERO -->
     <main class="heromae">
         <section class="hero reveal reveal-from-left">
             <h2>Desenvolvedor Full Stack & Especialista em Automação</h2>
             <p>
-                Transformo requisitos de negócios em soluções digitais eficientes, escaláveis e automatizadas. 
-                Com expertise em React, Node.js e integração de APIs, crio aplicações web que não apenas funcionam, 
+                Transformo requisitos de negócios em soluções digitais eficientes, escaláveis e automatizadas.
+                Com expertise em React, Node.js e integração de APIs, crio aplicações web que não apenas funcionam,
                 mas que <strong>eliminam tarefas manuais e impulsionam a eficiência operacional</strong>.
             </p>
             <p>
-                Meu diferencial é a implementação estratégica de automações em todo o fluxo de trabalho. 
-                Ao integrar scripts e APIs no backend, reduzo erros, economizo tempo e garanto que seus sistemas 
+                Meu diferencial é a implementação estratégica de automações em todo o fluxo de trabalho.
+                Ao integrar scripts e APIs no backend, reduzo erros, economizo tempo e garanto que seus sistemas
                 suportem o crescimento contínuo do seu negócio.
             </p>
 
@@ -51,8 +50,10 @@
                     Entrar em Contato
                 </a>
             </div>
+
         </section>
-        <img src="./img/Joel-removebg-preview.png" class="hero-img reveal reveal-from-right" alt="Foto de Yerijhon Rian">
+        <img src="./img/ChatGPT Image 17 de dez. de 2025, 09_36_12.png" class="hero-img reveal reveal-from-right"
+            alt="Foto de Yerijhon Rian">
     </main>
 
     <!-- SOBRE -->
@@ -62,22 +63,28 @@
         <div class="sobre-container">
             <div class="texto-sobre reveal reveal-from-bottom">
                 <p>
-                    Sou um Desenvolvedor Full Stack apaixonado por transformar ideias em soluções digitais robustas e escaláveis. 
-                    Minha expertise abrange toda a arquitetura de aplicações web, desde interfaces responsivas e animadas com React 
+                    Sou um Desenvolvedor Full Stack apaixonado por transformar ideias em soluções digitais robustas e
+                    escaláveis.
+                    Minha expertise abrange toda a arquitetura de aplicações web, desde interfaces responsivas e
+                    animadas com React
                     até backends poderosos com Node.js e Express.js.
                 </p>
                 <p>
-                    Mas o que realmente me diferencia é minha especialização em <strong>automação de processos</strong>. 
-                    Ao integrar APIs REST, scripts JavaScript e bancos de dados (MongoDB, Firebase), consigo eliminar tarefas manuais, 
+                    Mas o que realmente me diferencia é minha especialização em <strong>automação de processos</strong>.
+                    Ao integrar APIs REST, scripts JavaScript e bancos de dados (MongoDB, Firebase), consigo eliminar
+                    tarefas manuais,
                     reduzir erros e aumentar drasticamente a eficiência operacional dos sistemas que desenvolvo.
                 </p>
                 <p>
-                    Trabalho com metodologias ágeis (Scrum/Kanban) e tenho experiência em contato direto com clientes para alinhamento 
-                    de requisitos e entrega de soluções customizadas. Cada projeto é uma oportunidade de criar algo que gera 
+                    Trabalho com metodologias ágeis (Scrum/Kanban) e tenho experiência em contato direto com clientes
+                    para alinhamento
+                    de requisitos e entrega de soluções customizadas. Cada projeto é uma oportunidade de criar algo que
+                    gera
                     <strong>impacto real no negócio</strong> do cliente.
                 </p>
                 <p>
-                    Se você busca um desenvolvedor que não apenas escreve código limpo e bem documentado, mas que também pensa 
+                    Se você busca um desenvolvedor que não apenas escreve código limpo e bem documentado, mas que também
+                    pensa
                     estrategicamente sobre como otimizar seus processos, vamos conversar!
                 </p>
             </div>
@@ -93,14 +100,16 @@
             <div class="card reveal reveal-from-left">
                 <h3>Desenvolvimento Full Stack</h3>
                 <p>
-                    Criação de aplicações web completas, do frontend responsivo com React até o backend robusto com Node.js e Express.js. 
+                    Criação de aplicações web completas, do frontend responsivo com React até o backend robusto com
+                    Node.js e Express.js.
                     Soluções escaláveis e de alto desempenho.
                 </p>
             </div>
             <div class="card reveal reveal-from-left">
                 <h3>Automação de Processos (RPA/API)</h3>
                 <p>
-                    Desenvolvimento de scripts e integração com APIs REST para automatizar tarefas de negócios: pedidos, reservas, 
+                    Desenvolvimento de scripts e integração com APIs REST para automatizar tarefas de negócios: pedidos,
+                    reservas,
                     relatórios e fluxos de trabalho. Redução de erros e aumento de eficiência.
                 </p>
             </div>
@@ -109,14 +118,16 @@
             <div class="card reveal reveal-from-right">
                 <h3>Sites de Alto Desempenho</h3>
                 <p>
-                    Landing Pages e sites otimizados para conversão, velocidade e SEO. Interfaces modernas e responsivas que 
+                    Landing Pages e sites otimizados para conversão, velocidade e SEO. Interfaces modernas e responsivas
+                    que
                     captam clientes e geram resultados.
                 </p>
             </div>
             <div class="card reveal reveal-from-right">
                 <h3>Manutenção e Otimização</h3>
                 <p>
-                    Atualização, refatoração e melhoria de performance em sistemas existentes. Suporte técnico e evolução contínua 
+                    Atualização, refatoração e melhoria de performance em sistemas existentes. Suporte técnico e
+                    evolução contínua
                     de suas aplicações.
                 </p>
             </div>
@@ -135,8 +146,9 @@
                     <h3>Plataforma Web para Restaurante</h3>
                     <p>
                         <strong>Tecnologias:</strong> Node.js, Express.js, MongoDB, JavaScript<br>
-                        Sistema Full Stack para gestão de pedidos, reservas e automação de eventos. 
-                        A plataforma automatiza o fluxo de pedidos, reduzindo o tempo de atendimento e minimizando erros manuais. 
+                        Sistema Full Stack para gestão de pedidos, reservas e automação de eventos.
+                        A plataforma automatiza o fluxo de pedidos, reduzindo o tempo de atendimento e minimizando erros
+                        manuais.
                         Integração com APIs para sincronização de dados em tempo real.
                     </p>
                     <div class="projeto-links">
@@ -153,8 +165,10 @@
                     <h3>Landing Page com Automação de Leads</h3>
                     <p>
                         <strong>Tecnologias:</strong> HTML5, CSS3, JavaScript (ES6+)<br>
-                        Landing Page de alta conversão focada em captação de leads. Integração com API para redirecionamento 
-                        automático de clientes para WhatsApp. Design responsivo e otimizado para conversão, com formulário 
+                        Landing Page de alta conversão focada em captação de leads. Integração com API para
+                        redirecionamento
+                        automático de clientes para WhatsApp. Design responsivo e otimizado para conversão, com
+                        formulário
                         que automatiza o contato com prospects.
                     </p>
                     <div class="projeto-links">
@@ -166,13 +180,16 @@
 
             <!-- Projeto 3 -->
             <div class="projeto-card reveal reveal-from-bottom" style="transition-delay: 0.2s;">
-                <img src="https://i.pinimg.com/736x/be/95/94/be9594950e56ae404a07251caa167c98.jpg" alt="Imagem do Projeto 3">
+                <img src="https://i.pinimg.com/736x/be/95/94/be9594950e56ae404a07251caa167c98.jpg"
+                    alt="Imagem do Projeto 3">
                 <div class="projeto-info">
                     <h3>Aplicação de Gestão Financeira</h3>
                     <p>
                         <strong>Tecnologias:</strong> React, JavaScript (Assíncrono), Firebase/Local Storage<br>
-                        Aplicação para organização e controle de finanças pessoais com entradas, saídas, histórico completo 
-                        com datas e descrições. Demonstra domínio de lógica complexa, controle de estado avançado em JavaScript 
+                        Aplicação para organização e controle de finanças pessoais com entradas, saídas, histórico
+                        completo
+                        com datas e descrições. Demonstra domínio de lógica complexa, controle de estado avançado em
+                        JavaScript
                         e persistência de dados. Interface intuitiva focada em usabilidade.
                     </p>
                     <div class="projeto-links">
@@ -275,11 +292,14 @@
     <section class="carater reveal">
         <div class="valores">
             <h3>Meus Valores</h3>
-            <p><strong>Compromisso com cada projeto:</strong> Cada cliente merece atenção total e soluções customizadas.</p>
-            <p><strong>Código limpo e organizado:</strong> Facilita manutenção, escalabilidade e colaboração em equipe.</p>
+            <p><strong>Compromisso com cada projeto:</strong> Cada cliente merece atenção total e soluções customizadas.
+            </p>
+            <p><strong>Código limpo e organizado:</strong> Facilita manutenção, escalabilidade e colaboração em equipe.
+            </p>
             <p><strong>Aprendizado contínuo:</strong> Tecnologia evolui rapidamente; estou sempre me atualizando.</p>
             <p><strong>Foco em resultados:</strong> O objetivo é gerar impacto real no negócio do cliente.</p>
-            <p><strong>Excelente comunicação:</strong> Trabalho transparente e alinhado com as expectativas do cliente.</p>
+            <p><strong>Excelente comunicação:</strong> Trabalho transparente e alinhado com as expectativas do cliente.
+            </p>
         </div>
     </section>
 
@@ -287,15 +307,16 @@
     <footer>
         <p>© 2025 - Portfólio Yerijhon Rian | Full Stack Developer & Especialista em Automação</p>
         <p>
-            <a href="https://www.linkedin.com/in/yerijhonrian" target="_blank">LinkedIn</a> | 
-            <a href="https://github.com/joel-rian" target="_blank">GitHub</a> | 
-            <a href="https://www.instagram.com/y.joel.rian/?__pwa=1" target="_blank">Instagram</a> | 
-            <a href="https://wa.me/5574999094232?text=Ol%C3%A1%2C%20quero%20agendar%20um%20atendimento." target="_blank">WhatsApp</a>
+            <a href="https://www.linkedin.com/in/yerijhonrian" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/joel-rian" target="_blank">GitHub</a> |
+            <a href="https://www.instagram.com/y.joel.rian/?__pwa=1" target="_blank">Instagram</a> |
+            <a href="https://wa.me/5574999094232?text=Ol%C3%A1%2C%20quero%20agendar%20um%20atendimento."
+                target="_blank">WhatsApp</a>
         </p>
     </footer>
-
     <!-- JS -->
     <script src="javascript.js"></script>
+
 </body>
 
 </html>
