--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                         Integração com APIs para sincronização de dados em tempo real.
                     </p>
                     <div class="projeto-links">
-                        <a href="https://joel-rian.github.io/Restaurante/" target="_blank">Ver Projeto</a>
-                        <a href="https://github.com/joel-rian/Restaurante" target="_blank">Código no GitHub</a>
+                        <a href="https://yerijhonrian.github.io/Restaurante/" target="_blank">Ver Projeto</a>
+                        <a href="https://github.com/yerijhonrian/Restaurante" target="_blank">Código no GitHub</a>
                     </div>
                 </div>
             </div>
@@ -201,8 +201,8 @@
                         que automatiza o contato com prospects.
                     </p>
                     <div class="projeto-links">
-                        <a href="https://joel-rian.github.io/Mario-And-Luidi/" target="_blank">Ver Projeto</a>
-                        <a href="https://github.com/joel-rian/Mario-And-Luidi" target="_blank">Código no GitHub</a>
+                        <a href="https://yerijhonrian.github.io/mario-js-platformer/" target="_blank">Ver Projeto</a>
+                        <a href="https://github.com/yerijhonrian/mario-js-platformer" target="_blank">Código no GitHub</a>
                     </div>
                 </div>
             </div>
@@ -222,8 +222,8 @@
                         e persistência de dados. Interface intuitiva focada em usabilidade.
                     </p>
                     <div class="projeto-links">
-                        <a href="https://joel-rian.github.io/MinhasFinancas/" target="_blank">Ver Projeto</a>
-                        <a href="https://github.com/joel-rian/MinhasFinancas" target="_blank">Código no GitHub</a>
+                        <a href="https://yerijhonrian.github.io/expense-tracker-system/" target="_blank">Ver Projeto</a>
+                        <a href="https://github.com/yerijhonrian/expense-tracker-system" target="_blank">Código no GitHub</a>
                     </div>
                 </div>
             </div>
